fix: transmit/receive ranges not changing

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,5 +5,5 @@ api-version: '1.21'
 
 commands:
   locator:
-    description: Toggle locator functionality
+    description: Toggles locator bar functionality
     usage: /locator
