--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -1,5 +1,5 @@
 messages:
-  locator-toggled-on: "&aLocator bar toggled &aON&a."
-  locator-toggled-off: "&aLocator bar toggled &cOFF&a."
-  not-supported: "&cLocator bar is not supported on this server version."
+  locator-toggled-on: "&aLocator bar toggled &a&lON"
+  locator-toggled-off: "&aLocator bar toggled &c&lOFF"
+  not-supported: "&cLocator bar is not supported on this server version"
 
