feat: command to control the locator's radius (wip)

--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -1,3 +1,4 @@
 messages:
   locator-toggled-on: "&aLocator bar toggled &a&lON"
   locator-toggled-off: "&aLocator bar toggled &c&lOFF"
+  locator-radius-set: "&aLocator radius set to &e{radius}"
