--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ version: '1.2'
 author: Axyss
 main: dev.axyss.locatorToggle.Main
 api-version: '1.21'
+softdepend: ["PlaceholderAPI"]
 
 commands:
   locator:
