--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -2,7 +2,7 @@ messages:
   locator-toggled-on: "&aLocator bar toggled &a&lON"
   locator-toggled-off: "&aLocator bar toggled &c&lOFF"
   locator-radius-set: "&aLocator radius set to &e{radius}"
-  locator-radius-invalid: "&cInvalid radius. Provide a value between &e1 &cand &e60,000,000"
+  locator-radius-invalid: "&cInvalid radius. Provide a value between &e1 &cand &e{max}"
   placeholder-status-enabled: "&aenabled"
   placeholder-status-disabled: "&cdisabled"
 acf-core:
